Implement Banking System with LSP & OCP Refactor core banking operations to adhere to Liskov Substitution and Open/Closed Principles. Introduces ITransaction interface for extensible transaction types and TransactionProcessor for centralized, OCP-compliant transaction handling. Includes abstract Account and concrete SavingsAccount/CurrentAccount implementations demonstrating LSP for account-specific behaviors